# anki-cards-from-kindle-highlights

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/anki_cards_from_kindle_highlights/: __init__.py  __main__.py  anki.py  books.py  cli.py  clippings.py  db.py  llm.py  matcher.py  prompt.txt
src/anki_cards_from_kindle_highlights/anki-templates/: basic_back.html  basic_css.css  basic_front.html  cloze_back.html  cloze_front.html
src/anki_cards_from_kindle_highlights/cli/: __init__.py  dump.py  generate.py  generate_batch.py  helpers.py  import_cmd.py  reset.py  sync.py  view_book.py
tests/: conftest.py  test_anki.py  test_books.py  test_cli.py  test_clippings.py  test_db.py  test_helpers.py  test_integration.py  test_llm.py  test_matcher.py
