[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anki-cards-from-kindle-highlights"
version = "0.2.0"
description = "Prompt an LLM to generate Anki cards from Kindle highlights"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Fabian Svara", email = "fabian.svara@ariadne.ai" }]
keywords = ["anki", "kindle", "flashcards", "llm", "spaced-repetition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.15",
    "click>=8.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "tqdm>=4.0",
    "questionary>=2.0",
    "requests>=2.0",
    "tenacity>=8.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "html2text>=2024.2",
    "thefuzz>=0.22",
    "rich>=13.0",
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.8",
    "pre-commit>=3.6",
    "types-requests",
]

[project.scripts]
anki-cards-from-kindle-highlights = "anki_cards_from_kindle_highlights.cli:app"

[project.urls]
Repository = "https://github.com/fabiansvara/anki-cards-from-kindle-highlights"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_cards_from_kindle_highlights"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/anki_cards_from_kindle_highlights/**/*.py",
    "src/anki_cards_from_kindle_highlights/**/*.txt",
    "src/anki_cards_from_kindle_highlights/**/*.html",
    "src/anki_cards_from_kindle_highlights/**/*.css",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["anki_cards_from_kindle_highlights"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src/anki_cards_from_kindle_highlights"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
